Fix vertical alignement of the former contributors table

--- a/_sass/stk-wiki/stk-wiki-content.scss
+++ b/_sass/stk-wiki/stk-wiki-content.scss
@@ -68,6 +68,7 @@ color: #232627;
 
 .character_presentation_small {
    width: 50%;
+   vertical-align: top;
 }
 
 @media only screen and (max-width: 480px) {
